# Svarog-Agent-Harness

./: .gitignore  AGENTS.md  README.md  TASK.md  pyproject.toml
.github/workflows/: ci.yml
docker/agent-claude/: Dockerfile  README.md
docker/agent-opencode/: Dockerfile  README.md
docs/: first-issues.md  reference-analysis.md  repo-structure.md
docs/adr/: 0001-tech-stack.md  0002-security-enforcement-over-classification.md  0003-three-git-flows.md  0004-memory-single-writer.md  0005-resumable-runs.md  0006-secrets-execution-layer.md  0007-storage-sqlite-default.md  0008-mvp-scope.md  0009-skill-curator.md  0010-yolo-first-autonomy.md  0011-memory-wiki-progressive-index.md  0012-multi-tenancy.md  0013-privilege-levels.md  0014-multi-tenant-integration.md  0015-runtime-hardening-and-context-economy.md  0016-external-agent-executor.md  0017-cloud-mode.md  0018-chat-tui.md  0019-scheduler.md  0020-memory-proposals-and-dream.md
docs/superpowers/plans/: 2026-07-20-context-turn-reliability.md  2026-07-20-init-executor-setup.md  2026-07-21-boundary-guidance.md  2026-07-21-refuel-autocontinue.md  2026-07-21-scheduler.md  2026-07-21-sim-blockers-fix.md  2026-07-22-self-docs.md  2026-07-23-memory-proposals-and-dream.md  2026-07-23-review-followups.md
docs/superpowers/specs/: 2026-07-20-context-turn-reliability-design.md  2026-07-20-init-executor-setup-design.md  2026-07-21-boundary-guidance-design.md  2026-07-21-refuel-autocontinue-design.md  2026-07-21-scheduler-design.md  2026-07-21-sim-blockers-fix-design.md  2026-07-22-self-docs-design.md  2026-07-23-memory-proposals-and-dream-design.md
evals/: _harness.py  test_mvp_criteria.py
simulation/: README.md  personas.md  scenarios.md
simulation/runs/2026-07-23-f5b7495/: REPORT.md
src/svarog_harness/: __init__.py  paths.py  scaffold.py
src/svarog_harness/cli/: __init__.py  (+24 more)
tests/: conftest.py  test_agent_adapters.py  test_approval_flow.py  test_ask_user.py  test_bridge.py  test_chat.py  test_chat_commands.py  test_chat_completion.py  test_chat_display.py  test_chat_engine.py  test_chat_inline.py  test_chat_picker.py  test_chat_settings.py  test_child_runs.py  test_cli.py  test_cli_doctor.py  test_cli_install.py  test_cli_json.py  test_cli_memory_proposals.py  test_cli_push.py  test_cli_rewind.py  test_cli_run_traces.py  test_cli_scheduler.py  test_cli_sessions.py  test_cloud_sessions.py  test_cloud_workspaces.py  test_config.py  test_context_builder.py  test_curator.py  test_curator_layer2.py  test_deferred_tools.py  test_dream_profile.py  test_external_docker.py  test_external_executor.py  test_file_tools.py  test_gateway.py  test_guidance.py  test_harmony_leak.py  test_history_invariant.py  test_init.py  (+47 more)
(+164 files in other folders)
