[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svarog-harness"
version = "0.1.0"
description = "Git-native runtime for self-hosted AI agents: skills, sandboxed execution, Git memory, refuel loops, approval policies, full audit trace"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Svarog contributors" }]
keywords = ["ai", "agent", "harness", "llm", "runtime"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "openai>=1.60",
    "docker>=7.1",
]

[project.urls]
Repository = "https://github.com/kravtandr/Svarog-Agent-Harness"

[project.scripts]
svarog = "svarog_harness.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/svarog_harness"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "A",    # builtins shadowing
    "C4",   # comprehensions
    "SIM",  # simplify
    "PTH",  # pathlib
    "RUF",  # ruff-specific
]
# Комментарии и docstrings в проекте на русском — детектор «похожих на латиницу»
# символов дает сплошные ложные срабатывания на кириллице.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"src/svarog_harness/storage/migrations/versions/*" = ["E501"]

[tool.ruff.lint.isort]
# Явная классификация first-party: иначе isort зависит от того, как установлен
# пакет (editable src/ vs site-packages в CI), и порядок импортов расходится.
known-first-party = ["svarog_harness", "evals"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["svarog_harness"]
exclude = ["src/svarog_harness/storage/migrations/"]

[[tool.mypy.overrides]]
module = "svarog_harness.storage.migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
